Make cyclePricer more modular

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "deepmerge": "^2.0.1",
     "json2csv": "^3.11.5",
     "ml-logistic-regression": "^1.0.2",
     "ml-matrix": "^5.0.1",
@@ -22,6 +23,7 @@
     "scrape-it": "^4.1.2",
     "simple-statistics": "^5.2.1",
     "smr": "^0.12.6",
-    "svm": "^0.1.1"
+    "svm": "^0.1.1",
+    "web-auto-extractor": "^1.0.17"
   }
 }
