--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test-scraper": "nodemon --exec babel-node cyclePricer.js",
-    "test-regression": "nodemon --exec babel-node regression.js"
+    "test-scraper": "nodemon --exec babel-node scraper.js",
+    "test-analysis": "nodemon --exec babel-node analysis.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
