--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test-scraper": "nodemon --exec babel-node scrape.js",
-    "test-analysis": "nodemon --exec babel-node analysis.js"
+    "test-analysis": "nodemon --exec babel-node analysis.js",
+    "lint": "esw --watch src/"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -30,6 +31,13 @@
     "web-auto-extractor": "^1.0.17"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-watch": "^3.1.3",
+    "jshint": "^2.9.5"
   }
 }
